--- a/src/views/App.css
+++ b/src/views/App.css
@@ -1,12 +1,12 @@
-@font-face {
+/* @font-face {
     font-family: 'Gilroy';
     src: url('../assets/fonts/gilroy-regular.ttf');
-}
+} */
 video {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
+	width: 100%;
+	height: 100vh;
+	object-fit: cover;
 }
 body {
-    font-family: 'Gilroy' !important;
+	font-family: 'Gilroy';
 }
